bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:2: error: not found: value talkin
  if(talkin==true && (hour<7 || hour>20)){
     ^