bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if(talkin==true && (hour<7 || hour>20)){
    return true
  }else{
    return false
  }
}